--- a/ccs/style.css
+++ b/ccs/style.css
@@ -1,9 +1,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Edu+TAS+Beginner:wght@400;700&family=Sometype+Mono:wght@400;700&display=swap');
 
-*{
-    font-family: 'Edu TAS Beginner', sans-serif !important;
-}
+@import url('https://fonts.googleapis.com/css2?family=Sometype+Mono:ital,wght@0,400..700;1,400..700&display=swap');
 
 .title {
     font-family: 'Edu TAS Beginner', sans-serif !important;
@@ -12,6 +10,16 @@
     text-align: center;
 }
 
+p {
+    font-family: 'Edu TAS Beginner', sans-serif;
+    font-weight: 700;
+    font-size: 2rem;
+}
+
+.card-body p:first-child {
+    font-family: 'Sometype Mono', monospace;
+    font-size: 1rem;
+}
 
 header {
     background-image: url(../img/wall.png);
@@ -32,4 +40,14 @@ main {
     margin: 0 auto;
 }
  
+
+
+.card {
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.card:hover {
+    transform: translateY(-10px) rotate(10deg) scale(1.05);
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
+}
 
