--- a/ccs/style.css
+++ b/ccs/style.css
@@ -51,3 +51,12 @@ main {
     box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
 }
 
+.transparent {
+    background-color: rgba(0, 0, 0, 0.8);
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
